--- a/DictionaryManagerApp/Layout/NavMenu.razor
+++ b/DictionaryManagerApp/Layout/NavMenu.razor
@@ -15,18 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="wordsp">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Words parser
+            <NavLink class="nav-link" href="wordlistc">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Craft
             </NavLink>
         </div>
     </nav>
